--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-body::-webkit-scrollbar {
-    width: 7px;
+::-webkit-scrollbar {
+    width: 8px;
+    right: 10px;
 }
-body::-webkit-scrollbar-thumb {
-    background-color: grey;
-    border-radius: 6px;
+::-webkit-scrollbar-thumb {
+    background-color: rgb(68, 68, 68);
+    border-radius: 4px;
+}
+
+body {
+    overflow-x: hidden;
 }
