--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,10 +1,12 @@
 .header {
     position: sticky;
     z-index: 9;
-    top: 69px;
+    top: 70px;
     display: flex;
     align-items: center;
+    align-self: stretch;
     justify-content: flex-start;
+    width: 100%;
     margin: 5px;
     padding: 8px;
     transition: all ease-in-out .2s;
@@ -12,7 +14,7 @@
     overflow-y: hidden;
     white-space: nowrap;
     background-color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    box-shadow: 0px 0.5px 0px 0px rgba(172, 172, 172);
 }
 .header::-webkit-scrollbar {
     display: none;
