--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,11 +1,12 @@
 nav {
-    position: sticky;
-    top: 0;
     z-index: 9;
-    width: 100%;
+    position: sticky;
+    align-self: stretch;
+    top: 0;
     display: flex;
     justify-content: space-between;
-    background-color: rgb(250, 250, 250);
+    width: 100%;
+    background-color: #fff;
     transition: all ease-in-out .2s;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px -1px, rgba(0, 0, 0, 0.06) 0px 0px 2px -1px;
 }
