--- a/src/Components/SidebarSmall/SidebarSmall.css
+++ b/src/Components/SidebarSmall/SidebarSmall.css
@@ -7,7 +7,7 @@
     top: 73px;
     left: 0;
     height: 89.4%;
-    background-color: rgb(250, 250, 250);
+    background-color: #fff;
     transition: all ease-in-out .2s;
     overflow-x: hidden;
     overflow-y: scroll;
