--- a/src/Components/MainContainer/MainContainer.css
+++ b/src/Components/MainContainer/MainContainer.css
@@ -1,15 +1,15 @@
 .main-content-container {
     background-color: rgb(249, 249, 249);
-    transition: all ease-in-out .2s;
+    transition: all ease-in-out .3s;
 }
 
 .video-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 10px;
-    padding: 15px;
-    transition: all ease-in-out .2s;
+    margin: 6px;
+    padding: 8px;
+    transition: all ease-in-out .3s;
 }
