--- a/src/Components/Video/Video.css
+++ b/src/Components/Video/Video.css
@@ -1,15 +1,73 @@
 .card {
-    margin: 10px;
+    margin: 10px 0 25px 0;
     cursor: pointer;
     border: none;
     transition: all ease-in-out .2s;
 }
 .card:hover {
-    transform: translateY(-2px);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    transform: scale(1.08);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
-.card img {
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.vid-thumbnail {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+
+
+.card-body {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    padding: 0;
+    margin: 0;
+    margin-top: 6px;
+    /* border: 1px solid; */
+}
+
+.channel-img {
+    margin-left: 10px;
+}
+#channel-img {
+    height: 2.2rem;
+    width: 2.2rem;
+    border-radius: 50%;
+    margin: 10px;
+    margin-left: 0;
+}
+
+
+.vid-details {
+    width: 75%;
+    margin-left: 10px;
+    margin-top: 6px;
+    margin-bottom: 18px;
+    /* border: 1px solid; */
+}
+.vid-details h6 {
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 1.4;
+    letter-spacing: 0.4px;
+}
+.vid-details .channel-name {
+    margin-top: -4px;
+    font-size: 15px;
+    color: rgb(76, 76, 76);
+}
+.views-time {
+    font-size: 15px;
+    margin-top: -20px;
+}
+
+.runtime {
+    position: absolute;
+    right: 8px;
+    padding: 0.5px 4px;
+    font-size: 12px;
+    letter-spacing: 0.4px;
+    color: #fff;
+    background-color: #000;
+    transition: all ease-in-out .2s;
 }
